--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,39 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
+section#planetInfoWrapper {
+  border: solid 5px black;
+  width: 300px;
+  margin: 0 auto;
+}
+
+section#planetInfoWrapper h1 {
   text-align: center;
+  border-bottom: solid 5px black;
+  text-transform: uppercase;
+  padding: 10px 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+section#planetInfoWrapper div {
+  width: 80%;
+  margin: 0 auto;
+  padding: 30px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+section#planetInfoWrapper div ul {
+  list-style-type: none;
 }
 
-.App-link {
-  color: #61dafb;
+section#planetInfoWrapper div p {
+  text-align: center;
+  margin-top: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  margin: 30px auto 0;
+  display: block;
+  padding: 6px 24px;
 }
